...
			else {
				VStack {
					NavigationLink(
                        destination: LoginView(loggedIn: $loggedIn, currentUser: $currentUser),
						label: {
							HStack {
								Text("LOG IN")
									.font(.headline)
									.foregroundColor(Color.blue)
								Image(systemName: "arrow.right")
									.font(Font.title.weight(.bold))
							}
							.padding(.all, 20.0)
...
