...
					Button(action: {
                        let question = Question(self.question, withDetail: detail, withTags: tags)
						question.writeQuestionToDB()
						presentation.wrappedValue.dismiss()
					}, label: {
						HStack {
							Text("Ask question")
								.font(.headline)
								.foregroundColor(Color.blue)
							Image(systemName: "return")
								.font(Font.title.weight(.bold))
								.foregroundColor(.blue)
						}
...
